fix scrollbar on project page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,3 +113,7 @@ hr {
   background-color: #213ed7;
   border-radius: unset;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
